# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  engine.py
brain_games/logic/: .calc_logic.py.swp  calc_logic.py  even_logic.py  gcd_logic.py  prime_logic.py  progression_logic.py
brain_games/scripts/: .brain_even.py.swp  .brain_games.py.swp  .cli.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
