[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Terminal mini-games for your brain"
authors = ["batraz <batrazbotsiev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/botsiti/python-project-49"
classifiers = [
"Development Status :: 5 - Production/Stable"
]
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
ipykernel = "^6.19.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
